array.island.Island.scala.error
Erreur de compilation :
Island:6: error: identifier expected but integer literal found.
    var b = num[i+1]
                  ^Island:7: error: ']' expected but ';' found.
    if true {
^Island:7: error: '(' expected but 'true' found.
    if true {
       ^Island:10: error: illegal start of simple expression
  }
  ^